--- a/scss/uikit/components/_help.scss
+++ b/scss/uikit/components/_help.scss
@@ -13,7 +13,7 @@
     width:        30%;
     margin-right: -30%;
     right:        50px;
-    transition:   all 0;
+    // transition:   all 0;
 
     .ui-help--active & {
         margin-right: 0;
